# emm

./: .gitignore  Cargo.toml  index.toml  mcpack.toml
mrpack/: Cargo.toml
mrpack/src/: lib.rs  structs.rs
src/: cli.rs  error.rs  main.rs  modpack.rs  structs.rs  util.rs
src/api/: curseforge.rs  github.rs  mod.rs  modrinth.rs
src/commands/: add.rs  export.rs  import.rs  init.rs  list.rs  migrate.rs  mod.rs  pin.rs  remove.rs  unpin.rs  update.rs
src/commands/add/: curseforge.rs  github.rs  mod.rs  modrinth.rs
src/commands/curseforge/: export.rs  import.rs  mod.rs
src/commands/export/: mod.rs  modrinth.rs  packwiz.rs
src/commands/import/: mod.rs  modrinth.rs  packwiz.rs
src/commands/migrate/: loader.rs  minecraft.rs  mod.rs
src/commands/modrinth/: export.rs  import.rs  mod.rs
src/structs/: index.rs  mod.rs  mrpack.rs  pack.rs  packwiz.rs
src/util/: curseforge.rs  files.rs  github.rs  index.rs  mod.rs  modrinth.rs  pack.rs
src/util/versions/: fabric.rs  forge.rs  minecraft.rs  mod.rs  neoforge.rs  quilt.rs
