[package]
name = "emm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
clap_complete = "4.5.6"
dialoguer = "0.11.0"
ferinth = "2.11.0"
furse = "1.5.14"
indicatif = "0.17.8"
lazy_static = "1.4.0"
reqwest = "0.12.4"
serde = "1.0.200"
serde-xml-rs = "0.6.0"
thiserror = "1.0.59"
tokio = { version = "1.38.0", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
toml = "0.8.12"
mrpack = { version = "0.1.0", path = "./mrpack" }

[profile.release]
lto = true
strip = true
codegen-units = 1
