[package]
name = "emm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
clap_complete = "4.5.6"
console = "0.15.8"
dialoguer = { version = "0.11.0" }
indicatif = "0.17.8"
lazy_static = "1.4.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = "1"
serde_json = "1"
thiserror = "1.0.59"
tokio = { version = "1.38.0", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
toml = "0.8.12"
url = { version = "2.5.0", features = ["serde"] }
walkdir = "2.5.0"
zip = "2.1.0"
sha1 = "0.10.6"
async-recursion = "1.1.1"
lazy-regex = "3.1.0"
serde_repr = "0.1.19"
murmur2 = "0.1.0"


[profile.release]
lto = true
strip = true
codegen-units = 1
